# AMC4030-usbserial-controller

./: .gitignore  AMC4030_DeviceEnumerator.c  AMC4030_DeviceEnumerator.h  AMC4030_DeviceEnumerator_Win32.c  AMC4030_InstanceMonitor.c  AMC4030_InstanceMonitor.h  AMC4030_Panel.h  AMC4030_Panel.uir  AMC4030_UI.c  AMC4030_UI.h  AMC4030_UI_Internal.h  AMC4030_UI_bindings.c  README.md  cvi_uir_AMC4030.h  standalone-main.c
.github/workflows/: cmake-linux.yml  msbuild.yml  publish.yml
Protocol/: AMC4030_usb_com_protocol.h  AMC4030_usb_com_protocol_Internal.h  AMC4030_usb_com_protocol_Linux.c  AMC4030_usb_com_protocol_Shared.c  AMC4030_usb_com_protocol_Win32.c
library_required/: Callbacks.c  Callbacks.h  SerialDevice_Panel.c  SerialDevice_Panel.h  SerialDevice_Vtable.h  ThreadCompat.c  ThreadCompat.h  ui_shared.c  ui_shared.h
projects/: AMC4030-CVI-frontend.prj  AMC4030.sln  AMC4030_CVI_UI.vcxproj  AMC4030_CVI_UI.vcxproj.filters  AMC4030_CVI_UI_Standalone.vcxproj  AMC4030_CVI_UI_Standalone.vcxproj.filters  AMC4030_CVI_UI_dynamic.vcxproj  AMC4030_CVI_UI_dynamic.vcxproj.filters  AMC4030_usb_proto.vcxproj  AMC4030_usb_proto.vcxproj.filters  AMC4030_usb_proto_dynamic.vcxproj
projects/CMAKE/: CMakeLists.txt  README.md
projects/CVI2017/: AMC4030-CVI-frontend.prj
projects/VS2022/: AMC4030_CVI_UI.vcxproj  AMC4030_CVI_UI.vcxproj.filters  AMC4030_CVI_UI_Standalone.vcxproj  AMC4030_CVI_UI_Standalone.vcxproj.filters  AMC4030_CVI_UI_dynamic.vcxproj  AMC4030_CVI_UI_dynamic.vcxproj.filters  AMC4030_usb_proto.vcxproj  AMC4030_usb_proto.vcxproj.filters  AMC4030_usb_proto_dynamic.vcxproj
